# allpix-squared

./: .gitlab-ci.yml  README.md
etc/unittests/test_modules/: test_03-4_deposition_source_point.conf  test_03-6_deposition_source_sphere.conf  test_05-1_transfer_simple.conf
src/core/: Allpix.cpp
src/core/module/: Event.cpp  ModuleManager.cpp
src/modules/CaloOutputWriter/: CMakeLists.txt  CaloOutputWriterModule.cpp  CaloOutputWriterModule.hpp  Linkdef.h  Linkdef.h.gch  README.md
src/modules/DepositionGeant4/: DepositionGeant4Module.cpp
src/objects/: DepositedCharge.cpp  DepositedCharge.hpp  MCParticle.cpp  MCParticle.hpp  MCTrack.cpp  MCTrack.hpp  Object.hpp  Pixel.hpp  PixelCharge.cpp  PixelCharge.hpp  PixelHit.cpp  PixelHit.hpp  PropagatedCharge.cpp  PropagatedCharge.hpp  SensorCharge.hpp
tools/mesh_converter/: MeshPlotter.cpp
